# se-toolkit-lab-8

./: .env  FAIL.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml
backend/: PLAN.md  pyproject.toml
backend/src/lms_backend/: database.py  main.py  settings.py  storage.py
backend/src/lms_backend/db/: files.py  migrations.py  schema.sql
backend/src/lms_backend/models/: file.py  file_tag.py  tag.py  user.py
backend/src/lms_backend/routers/: __init__.py  files.py  items.py
frontend/telegram/: Dockerfile  PLAN.md  bot.py  config.py  context.py  pyproject.toml
frontend/telegram/handlers/: callbacks.py  commands.py  document.py  start.py  text.py
frontend/telegram/services/: api_client.py  nanobot_client.py
mcp/: PLAN.md
mcp/mcp-lms/src/mcp_lms/: __init__.py  client.py  models.py  server.py  tools.py
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  settings.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/cron/: jobs.json
nanobot/workspace/memory/: history.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
