[project]
name = "nanobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp-webchat",
    "nanobot-ai>=0.1.4.post6",
    "nanobot-webchat",
]

[tool.uv.sources]
# nanobot-webchat = { path = "../nanobot-websocket-channel/nanobot-webchat", editable = true }
# mcp-webchat = { path = "../nanobot-websocket-channel/mcp-webchat", editable = true }
nanobot-webchat = { workspace = true }
mcp-webchat = { workspace = true }
